<resources>
    <string name="biof_1_1">Тарас Григорович Шевченко — (відомий також як Кобза́р; 25 лютого (9 березня) 1814, с. Моринці, Київська губернія, Російська імперія (нині Звенигородський район, Черкаська область, Україна) — 26 лютого (10 березня) 1861, Санкт-Петербург, Російська імперія) — український поет, письменник (драматург, прозаїк), художник (живописець, гравер), громадський та політичний діяч. Національний герой і символ України.</string>
    <string name="biof_1_2">Іван́ Я́кович Фра́нко ́— (27 серпня 1856, с. Нагуєвичі — 28 травня 1916, Львів, Австро-Угорщина) — видатний український письменник, поет, публіцист, перекладач, науковець, громадський і політичний діяч. Доктор філософії (1893), дійсний член Наукового товариства імені Шевченка (1899), почесний доктор Харківського університету (1906)</string>
    <string name="biof_1_3">Ле́ся Украї́нка ́— (справжнє імя Лари́са Петрі́вна Ко́сач-Кві́тка; 13 (25) лютого 1871, Звягель, нині Новоград-Волинський[5] — 19 липня (1 серпня) 1913, Сурамі, Грузія) — українська письменниця, перекладачка, культурна діячка. Співзасновниця літературного гуртка «Плеяда». В сучасній українській традиції входить до переліку найвідоміших жінок давньої та сучасної України</string>
    <string name="biof_1_4">Григо́рій Са́вич Сковорода́ ́— (22 листопада (3 грудня) 1722, Чорнухи, Лубенський полк — 29 жовтня (9 листопада) 1794, Іванівка, Харківщина) — видатний український філософ-містик, богослов, поет, педагог, можливо, і композитор літургійної музики. Мав значний вплив на сучасників і подальші покоління своїми байками, піснями, філософськими творами, а також способом життя, через що його називали «Сократом».</string>
    <string name="biof_1_5">Лі́на Васи́лівна Косте́нко (нар. 19 березня 1930, Ржищів, Київська округа, Українська СРР) — українська письменниця, поетеса-шістдесятниця. Лауреат Шевченківської премії (1987), Премії Антоновичів (1989).</string>
    <string name="biof_1_6">Підмоги́льний Валерян (Валеріян) Петро́вич  ́—(2 лютого 1901, с. Писарівка[2], тепер Дніпропетровська область (за іншими даними с. Чаплі під Катеринославом[3]) — 3 листопада 1937, Сандармох, Карелія) — український письменник і перекладач, один з найвизначніших прозаїків українського «розстріляного відродження».</string>
    <string name="app_name">Українська література</string>
    <string name="search_1">Біографія</string>
    <string name="search_2">Дати</string>
    <string name="search_3">Не зрозумілі мені слова</string>
    <string name="value">Value</string>
    <string name="button_1">Усна народна творчість</string>
    <string name="button_2">Давня українська література</string>
    <string name="button_3">Література кінця XVIII — перших десятиліть XIX ст.</string>
    <string name="button_4">Література 40-60-х років ХІХ століття</string>
    <string name="button_5">Література 70-90-х років XIX століття </string>
    <string name="button_6">Література кінця XIX — початку XX сторіччя</string>
    <string name="button_7">Література ХХ ст.Книга</string>
    <string name="button_8">Література кінця XIX — початку XX сторіччя</string>
    <string name="Bbutton_1"> Одним із найдавніших видів ycної творчості народу є календарно-обрядові пісні, які відображали кожен цикл хліборобської праці в різні пори року. Усі календарно-обрядові пісні відзначаються ліризмом.

Залишки первісної обрядовості згодом були змішані з християнськими обрядами й повязані з церковно-календарними датами християнських свят. "<b>"  "</b>"

До календарно-обрядових пісень належать:

- колядки, щедрівки (зимовий різдвяний цикл);

- веснянки, гаївки, або гагілки (весняний цикл);

- русальні (повязані зі святковим циклом колосіння збіжжя та розквіту природи наприкінці весни);

- купальські (переджниварський цикл середини літа);

- жниварські і стодольні (збирання врожаю в кінці літа).

Зимовий цикл. Колядки - це відтворення міфу про створення Світу і величальні пісні, призначені для кожної конкретної людини: господаря, господині, хлопця, дівчини, дитини. У них досить часто називаються імена тих, кого величають.

Що ж означає слово коляда? В українців це і сам обряд, і різдвяна пісня, і винагорода за колядування. За твердженням давніх авторів, Коляда - один із язичницьких богів, що символізував початок року. Можливо, від Коляди походить і слово календар (річне коло). У римлян тотожним Коляді був бог Янус, а від нього - назва першого місяця року «януаріс» (січень). Слово коляда є в усіх словянських народів із тим же значенням, що і в українців.</string>
    <string name="Bbutton_2">
        «Повість минулих літ»
        "<b>"  "</b>"
Жанр: літопис.

Про твір: «Повість минулих літ» — це перший літопис, який дійшов до нас, його ще називають «Початковим літописом». До речі, саме він проливає світло на історію нашого народу від найдавніших часів і до днів життя Нестора Літописця — автора цього твору.

Літопис розповідає про початок української держави, про перших наших князів. Цікавою є легенда про заснування Києва: апостол Андрій Первозваний під час подорожі по Дніпру пророкував, що на прибережних пагорбах постане місто: «Бачите ви гори сі? Так от, на сих горах возсіяє благодать Божа, і буде город великий, і церков багато воздвигне Бог». Докладно автор розповідає про походи київських князів, про Олега та його похід на столицю Візантії Царгород (сучасний Стамбул), на воротах якого він повісив свій щит на знак перемоги. Одним із найвідоміших фрагментів «Повісті минулих літ», який пізніше ліг в основу сюжетів багатьох літературних творів, є розповідь про войовничого Святослава, який не знав страху й ніколи не відступав перед ворогом. Його вислів «Іду на Ви!» став афоризмом, ці слова князь відкрито промовляв, коли мав намір боротися з ворогом. Відомим також став вислів Святослава, який він виголосив перед нерівним боєм зі стотисячним грецьким військом: «Не осоромимо землі Руської, ляжемо тут кістьми: мертві бо сорому не мають, а якщо побіжимо, то сором матимемо; станемо ж кріпко, я перед вами піду; якщо моя голова ляже, то дбайте самі про себе». З-поміж найвідоміших сюжетів літопису такі: про загибель Ігоря, про помсту княгині Ольги древлянам, про вбивство Бориса й Гліба їхнім братом Святополком.

Захоплення героїчним минулим Київської Русі й глибокий сум з приводу княжих міжусобиць і лиха, заподіяного ординцями, — провідні мотиви літопису.
    </string>
    <string name="Bbutton_3"> "<b>"  "</b>"
«Наталка Полтавка»

Іван Петрович Котляревський - видатний український письменник, поет, драматург, засновник сучасної української літератури, громадський діяч.

Котляревський жив і творив у епоху великих суспільно-історичних перетворень, головним змістом яких було визрівання гострої кризи феодального суспільства і перехід до нової, капіталістичної формації.

Його поема «Енеїда» (1798) відкрила новий етап розвитку української літератури, це перший в українській літературі твір, написаний народною мовою.

«Енеїда» 1798 р. було надруковано три частини поеми І. Котляревського «Енеїда». Твір став першою ластівкою нової української літератури.

1809 р. - вийшла четверта частина твору, 1822 р. - п'ята, 1825 - 1826 p. - поему завершено повністю, 1842 р. (після смерті письменника) - видано.

Використавши сюжет поеми римського поета Вергілія, Котляревський травестував його, наповнив національним змістом і створив цілком оригінальну поему, у якій з енциклопедичною широтою і точністю відобразив життя і побут українського народу. Твір написаний живою розмовною мовою, легким, грайливим і жартівливим віршем. Головне достоїнство «Енеїди» - яскравий національний колорит, різнобічне зображення життя усіх верств суспільства XVIII ст., передусім козацтва, його боротьби за державність після зруйнування Запорозької Січі у 1775 р.

За жанром «Енеїда» - травестійна бурлескна поема.

Система віршування - силабо-тонічна: у кожному рядку є певна послідовність у чергуванні наголошених і ненаголошених складів.

Віршовий розмір - ямб.

Строфа - десятирядкова (децина).

Композиція. 6 частин (порівняйте: у Вергілія - 12). Котляревський вплітає у твір епізоди з життя українських козаків, старшини, селянства, міщан, священиків; масштабні описи побуту українського суспільства, що робить твір оригінальним.
    </string>
    <string name="Bbutton_4"> "<b>"  "</b>"
        Т.Г. Шевченко - центральна постать українського літературного процесу XIX ст. Його творчість мала вирішальне значення в становленні й розвитку нової української літератури, утвердивши в ній загальнолюдські демократичні цінності та піднісши її до рівня передових літератур світу. У своїй поезії Шевченко звернувся до тем, проблем та ідей (соціальних, політичних, філософських, історичних, художніх), які до нього ще не порушувалися в українській літературі або порушувалися надто несміливо й соціально обмежено.

Тарас Шевченко відомий у всьому світі як Великий Кобзар, співець життя народного. Він є основоположником критичного реалізму в українській літературі. Він підняв дух кріпосної України, не зупинився перед зухвалою політикою національного гноблення. Був членом Кирило-Мефодіївського товариства.

Творча спадщина Великого Кобзаря

Збірка поезій «Кобзар»; 9 повістей (із 20-ти задуманих); пєса «Назар Стодоля»; кілька уривків інших драматичних творів; щоденник; листи.

Поетична збірка «Кобзар» названа в народі Книгою Правди; це «епоха в історії духовного розвитку цілого народу українського», бо вона «відразу відкрила немов новий світ поезії» (І. Франко).

Перше видання «Кобзаря», що вміщувало 8 творів (відкривалося віршем «Думи мої, думи мої...»), припадає на 1840 р.

Етапи творчості Тараса Шевченка:

I - ранній (1838 - 1843 pp.);

II - 1843- 1847 pp.;

III - невольнича поезія (1847 - 1857 pp.);

- 1847 - 1850 pp. (Оренбург, Кос-Арал);

- 1850 - 1857 pp. (Новопетровська фортеця);

IV - творчість після заслання (1857 - 1861 pp.).

І. Рання творчість

Шевченко виступає переважно як романтик і реаліст одночасно.

Основні мотиви ранньої творчості:

- сирітство і соціальна нерівність («Тяжко-важко в світі жити»);

- трагічна доля жінки-покритки і розбещеність панів («Катерина», «Маряна-черниця»);

- героїчне минуле України («Іван Підкова», «До Основяненка», «Тарасова ніч», «Гайдамаки», «Гамалія»);

- тема ролі поета в суспільному житті («Думи мої, думи мої...»);

«Катерина» (1838)

Жанр: ліро-епічна соціально-побутова поема з народного життя.

Тема: розповідь про трагічну долю матері-покритки та дітей-безбатченків в експлу-ататорському суспільстві та зображення розбещеності російського офіцерства.

Сюжет і композиція

Ліричний вступ. Поема розпочинається зверненням-застереженням до дівчат не кохати москалів-паничів, бо їхня «любов» зрадлива, легковажна, а покинуті «москалями» дівчата часто гинуть морально або накладають на себе руки.

Сюжетна основа твору - розповідь про нещасливе кохання сільської дівчини Катрі, яка на свою біду полюбила пана-офіцера.

Завязка сюжету. Знайомство Катерини з офіцером Іваном, його відїзд і народження у Катрі позашлюбного сина, що викликало осуд усього села.

Перший розділ закінчується повідомленням про те, що «вернулись москалики», але «іншими шляхами» (не до Катерини, яка все чекає на батька дитини). Батьки, прислухаючись до суспільної думки, не можуть чекати.

Другий розділ починається драматичною сценою. У глибокій зажурі сидять за столом батьки Катерини. Мати докоряє дочці тим, що вона, не пошанувавши ні своєї, ні батьківської честі, народила позашлюбне дитя, що є великою ганьбою. Батькам краще не мати на старості підтримки від дочки, а ніж на кожному кроці чути глузування з боку односельців. </string>
</resources>