<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingBottom="1dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".BlankFragment_1">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:gravity="center"
            android:text="Теорія" />


    </android.support.v7.widget.CardView>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible" />

                <View
                    android:id="@+id/divider00"
                    android:layout_width="match_parent"
                    android:layout_height="13dp"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="16dp"
                    android:autoText="false"
                    android:gravity="center"
                    android:text="Перша частина"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="MissingConstraints" />


                <View
                    android:id="@+id/divider10"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/Button_1"
                    android:layout_width="361dp"
                    android:layout_height="121dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_one"
                    android:gravity="center"
                    android:text="@string/button_1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#ffffff"
                    android:textStyle="italic" />

                <Button
                    android:id="@+id/Button_2"
                    android:layout_width="361dp"
                    android:layout_height="121dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_two"
                    android:gravity="center"
                    android:text="@string/button_2"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#ffffff"
                    android:textStyle="italic" />

                <View
                    android:id="@+id/divider11"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:autoText="false"
                    android:gravity="center"
                    android:text="Друга частина"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/Button_3"
                    android:layout_width="361dp"
                    android:layout_height="121dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_three"
                    android:gravity="center"
                    android:text="@string/button_3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#ffffff"
                    android:textSize="24dp"
                    android:textStyle="italic" />

                <View
                    android:id="@+id/divider12"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/Button_4"
                    android:layout_width="361dp"
                    android:layout_height="121dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_four"
                    android:gravity="center"
                    android:text="@string/button_4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#ffffff"
                    android:textSize="25dp"
                    android:textStyle="italic" />

                <View
                    android:id="@+id/divider13"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/Button_5"
                    android:layout_width="361dp"
                    android:layout_height="121dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_five"
                    android:gravity="center"
                    android:text="@string/button_5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#ffffff"
                    android:textSize="25dp"
                    android:textStyle="italic" />

                <View
                    android:id="@+id/divider14"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/Button_6"
                    android:layout_width="361dp"
                    android:layout_height="121dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_six"
                    android:gravity="center"
                    android:text="@string/button_6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#ffffff"
                    android:textSize="25dp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:autoText="false"
                    android:gravity="center"
                    android:text="Третя частина"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="MissingConstraints" />

                <View
                    android:id="@+id/divider15"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/Button_7"
                    android:layout_width="361dp"
                    android:layout_height="121dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_seven"
                    android:gravity="center"
                    android:text="@string/button_7"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#ffffff"
                    android:textSize="24dp"
                    android:textStyle="italic" />

                <View
                    android:id="@+id/divider16"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/Button_8"
                    android:layout_width="361dp"
                    android:layout_height="121dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_eight"
                    android:gravity="center"
                    android:text="@string/button_8"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#ffffff"
                    android:textSize="26dp"
                    android:textStyle="italic" />

                <View
                    android:id="@+id/divider17"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible" />


            </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</FrameLayout>
